--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "gulp": "^3.9.1",
     "gulp-sass": "^3.1.0",
     "gulp-sass-lint": "^1.3.2"
+  },
+  "devDependencies": {
+    "gulp-webserver": "^0.9.1"
   }
 }
